--- a/src/app/poll-list/poll-list.component.html
+++ b/src/app/poll-list/poll-list.component.html
@@ -11,8 +11,11 @@
         <mat-radio-button></mat-radio-button>
          Option {{o.optionId + 1}} : {{o.answer}}
         </mat-list-item>
+        <br><br>
       </mat-list>
-      <p class="vote-text mat-body-1">
+      <br>
+      <button mat-raised-button color="primary">Submit Vote</button>
+      <p class="mat-body-1">
         Total Votes for Poll: {{p.totalVotes}}
       </p>
     </mat-expansion-panel>
