--- a/src/app/create-poll/create-poll.component.css
+++ b/src/app/create-poll/create-poll.component.css
@@ -12,7 +12,9 @@ textarea{
 }
 
 button{
-    margin-left: 20px;
+    margin-left: 10px;
     margin-top: -30px;
+    margin-right: 5px;
     float: right;
 }
+
