--- a/src/app/poll-list/poll-list.component.html
+++ b/src/app/poll-list/poll-list.component.html
@@ -9,16 +9,17 @@
       <mat-list *ngFor="let o of p.options; let voteOption = index">
         <mat-list-item>
         <mat-radio-button (click)="setVote(voteOption, pollId)"></mat-radio-button>
-         Option {{o.optionId + 1}} : {{o.answer}}
+         Option {{voteOption + 1}} : {{o.answer}}
         </mat-list-item>
         <p id="numVotes" class="mat-body-1" *ngIf="p.totalVotes > 0">
-          Option {{o.optionId + 1}} has {{(o.numVotes / p.totalVotes) * 100 | number}}% of the Votes. 
+          {{o.answer}} has {{(o.numVotes / p.totalVotes) * 100 | number}}% of the Votes. 
         </p>
         <br>
         <hr>
       </mat-list>
       <br>
-      <button mat-raised-button color="primary" (click)="submitVote()">Submit Vote</button>
+      <button mat-raised-button color="warn" (click)="deletePoll(p._id)">Delete Poll</button>
+      <button mat-raised-button color="primary" (click)="submitVote(p._id, p)">Submit Vote</button>
       <p class="mat-body-1">
         Total Votes for Poll: {{p.totalVotes}}
       </p>
