--- a/src/app/poll-list/poll-list.component.css
+++ b/src/app/poll-list/poll-list.component.css
@@ -1,9 +1,12 @@
 button{
     float: right;
     margin-left: 10px;
+    margin-top: -35px;
 }
 
 #numVotes{
     float: right;
     margin-top: -30px;
 }
+
+
