--- a/src/app/create-poll/create-poll.component.html
+++ b/src/app/create-poll/create-poll.component.html
@@ -33,8 +33,8 @@
     <br>
     <br>
   </form>
-  <button id="submit" mat-raised-button color="primary" (click)="createPoll()">Submit Poll</button>
-  <button id="optionButton" mat-raised-button color="accent" (click)="addPollOption(pollQuestion.value, pollOption.value)">Add Poll Option</button>
+  <button mat-raised-button color="primary" (click)="createPoll(pollQuestion.value)">Submit Poll</button>
+  <button mat-raised-button color="accent" (click)="addPollOption(pollOption.value)">Add Poll Option</button>
 </mat-card>
 <br>
 <br>
