--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
-<app-header></app-header>
-<mat-toolbar-row>
-        <button mat-button [routerLink]="['/create']">Create</button>
-        <button mat-button [routerLink]="['/list']">List</button>
-</mat-toolbar-row>
+<app-header>
+        
+</app-header>
 <main>
 <!--<app-create-poll></app-create-poll>-->
 </main>
