--- a/src/app/app-header/app-header.component.css
+++ b/src/app/app-header/app-header.component.css
@@ -1,3 +1,21 @@
 #toolbar{
     margin-bottom: 20px;
 }
+
+.example-container {
+    margin-top: -20px;
+    width: 150px;
+    height: 600px;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+  }
+
+  .example-sidenav-content {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .example-sidenav {
+    padding: 20px;
+  }
