--- a/src/app/edit-poll/edit-poll.component.html
+++ b/src/app/edit-poll/edit-poll.component.html
@@ -1,6 +1,9 @@
 <mat-card>
+
   <form #editForm="ngForm">
+    
     <mat-form-field>
+      <!-- input for edited poll question -->
       <input matInput
       id="questionInput"
       type="text"
@@ -10,9 +13,13 @@
       minlength="3"
       placeholder="Enter your Edited Polls Question"
       #editQuestion="ngModel">
+      
+      <!-- display error if question invalid -->
       <mat-error *ngIf="editQuestion.invalid || editQuestion.length <= 0"></mat-error>
     </mat-form-field>
+    
     <mat-form-field>
+      <!-- text area for edited poll answers -->  
       <textarea
       id="optionArea" 
       matInput
@@ -26,35 +33,53 @@
       #editOption="ngModel">
 
       </textarea>
+      
+      <!-- display error if option not valid -->
       <mat-error *ngIf="editOption.invalid || editOption.length <= 0">Please enter valid poll option</mat-error>
     </mat-form-field>
+    
     <br>
     <br>
     <br>
+
   </form>
+  
+  <!-- Buttons for adding poll options & submitting edited poll -->
+  <!-- update poll passes in poll question on submit-->
+  <!-- add poll option passes in value from text area to be added -->
   <button mat-raised-button color="primary" (click)="updatePoll(editQuestion.value)">Save New Poll</button>
   <button mat-raised-button color="accent" (click)="addPollOption(editOption.value)">Add Poll Option</button>
+
 </mat-card>
+
 <br>
 <br>
 
 <mat-card>
+  
   <mat-card-title>Your Poll Question</mat-card-title>
+  
   <br>
+  
   <mat-card-subtitle>{{pollModel.question}}</mat-card-subtitle>
   <mat-card-subtitle>Your Poll Options</mat-card-subtitle>
   
   <mat-list *ngFor="let o of pollOptions; let i = index">
+    
     <mat-list-item class="mat-body-1">
       Poll Answer {{i + 1}}: {{o.answer}}
       <br><br>
     </mat-list-item>
+    
     <button mat-raised-button color="warn" (click)="deleteOption(i)">Delete</button>
     <button mat-raised-button color="primary" (click)="editPollOption(editOption.value, i)">Edit</button>
+    
     <mat-error *ngIf="editOption.invalid || editOption.length <= 0">Please enter Edited Text in Text Area then Click Edit Button</mat-error>
+    
     <br>
     <hr>
     <br><br>
+  
   </mat-list>
 
 </mat-card>
