app ready for submit

--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -8,6 +8,7 @@
 
     <!-- router links to create & list page -->
     <mat-toolbar-row>
+        <button mat-button [routerLink]="['']"><b>Home</b></button>
         <button mat-button [routerLink]="['/create']"><b>Create Poll</b></button>
         <button mat-button [routerLink]="['/list']"><b>List Polls</b></button>        
     </mat-toolbar-row>
